tests/deriving/should_fail/drvfail005.hs
module ShouldFail where

data Test a = T a 
  deriving( Show a, Read )
