tests/deriving/should_fail/drvfail005.stderr
drvfail005.hs:4:13: error: [GHC-73993]
    • ‘Show a’ is not a unary constraint, as expected by a `deriving' clause
    • In the data type declaration for ‘Test’

